trying to merge

--- a/paper/cognitive-modeling.Rmd
+++ b/paper/cognitive-modeling.Rmd
@@ -147,15 +147,15 @@ BEGINNING OF TEXT
 
 Cognitive aging researchers aim to understand how cognitive processes change across the adult lifespan, particularly into old age. However, it is impossible to observe a "cognitive process" directly; rather, we must infer cognitive processes from observed behavior (e.g., accuracy, reaction time). One way this is commonly done is by submitting raw data or aggregated data (e.g., mean RT by condition) to a *t*-test, ANOVA, or mixed effects model and inferring process(es) through differences between conditions and their interaction with age. However, this interpretation relies on a simple mapping of cognitive processes onto observed behavior, which is unlikely to be the case and can result in incorrect conclusions about the source of age-differences [see @Salthouse2000]. In contrast to standard analysis, *cognitive models* formalize the relationship between hypothesized underlying processes and observed behavior by way of parameters that reflect the contributions of latent cognitive processes, and are therefore more suitable for identifying what processes are (or are not) associated with aging. 
 
-This paper provides a tutorial on fitting and interpreting cognitive models in the context of cognitive aging research. There are *many* types of cognitive models, suitable for different tasks, and it would be impossible for us to exhaustively describe and implement all (or even a substantial subset) of them. Thus, we use an example of a two choice discrimination task, given that this kind of task is widely used in cognitive aging research (as we discuss below in the section "How Widespread is the Cognitive Modeling in Cognitive Aging Research?"). Nevertheless, we have chosen to focus on highly flexible modeling software (Stan), and the tutorial below is written with the intention of generalizing to other areas, so that readers will be able to start implementing models that are relevant to their particular research area.[^sdt] Finally, the tutorial focuses on implementing hierarchical models under a Bayesian statistical framework. Hierarchical modeling allows one to model group level differences as well as individual differences simultaneously, and Bayesian model comparison allows researchers to go beyond null hypothesis significance testing to quantify the strength of evidence for or against age-related changes to particular cognitive processes [these benefits have been discussed extensively elsewhere; see, e.g., @GelmanEtAl2014; @Kruschke2015; @lee2014bayesian].
+This paper provides a tutorial on fitting and interpreting cognitive models in the context of cognitive aging research. There are *many* types of cognitive models, suitable for different tasks, and it would be impossible for us to exhaustively describe and implement all (or even a substantial subset) of them. Nevertheless, some of the models that may be most suitable for cognitive aging researchers are models of accuracy or reaction time, given that these are two of the most widely reported outcomes in studies of cognitive aging (see section "How Widespread is Cognitive Modeling in Cognitive Aging Research?"). A popular model of reaction time is the drift diffusion model [@Ratcliff1978], and popular models of accuracy include multinomial processing tree (MPT) models and signal detection theory (SDT) models. There are also many other models, including computational models, which attempt to formalize the underlying nature of a cognitive process (e.g., storage of features in memory as vectorized representations), though these are less common.  In this tutorial, we use an example of a two choice discrimination task, given that this kind of task is widely used in cognitive aging research. We use an example of a SDT analysis, and in the supplement we also discuss MPT analyses. We have chosen to focus on highly flexible modeling software (Stan), and the tutorial below is written with the intention of generalizing to other areas, so that readers will be able to start implementing models that are relevant to their particular research area.[^sdt] Finally, the tutorial focuses on implementing hierarchical models under a Bayesian statistical framework. Hierarchical modeling allows one to model group level differences as well as individual differences simultaneously, and Bayesian model comparison allows researchers to go beyond null hypothesis significance testing to quantify the strength of evidence for or against age-related changes to particular cognitive processes [these benefits have been discussed extensively elsewhere; see, e.g., @GelmanEtAl2014; @Kruschke2015; @lee2014bayesian].
 
 [^sdt]: Indeed there are existing `R` packages that offer user-friendly implementations of hierarchical SDT models, including `bhsdtr` [@paulewicz2020bhsdtr] and `brms` (@brms; see https://vuorre.netlify.app/post/2017/10/09/bayesian-estimation-of-signal-detection-theory-models-part-1/). In covering Stan we want to show readers how to implement models from scratch for situations where a user-friendly implementation does not exist or where more control over the details is desired.
 
-Although the following tutorial is intended to be an aid for novice modelers, and a refresher for more expert modelers, we acknowledge upfront that learning cognitive modeling will take time and patience. That is, this tutorial alone may not be sufficient for learning everything about cognitive modeling, given the breadth of research on this topic. To that end, we discuss some of the best practices for researchers to consider as they begin their journey with cognitive modeling. We also acknowledge that mastering cognitive modeling will likely require learning some rather technical concepts. Although we aim to keep this tutorial as accessible as possible for the novice reader, it would be a disservice to avoid technical details where they are necessary. Nevertheless, we aim to break these technical details down into simpler terms to ease with understanding. Ultimately, it is our hope that this tutorial will serve as a useful guide and a great starting point for cognitive aging researchers who are interested in learning cognitive modeling and applying such models to their own data.  
+Although the following tutorial is intended to be an aid for novice modelers, and a refresher for more expert modelers, we acknowledge upfront that learning cognitive modeling will take time and patience. This tutorial alone may not be sufficient for learning everything about cognitive modeling, given the breadth of research on this topic. To that end, we discuss some of the best practices for researchers to consider as they begin their journey with cognitive modeling (see section "Recommendations on Best Practices and Further Readings"). We also acknowledge that mastering cognitive modeling will likely require learning some rather technical concepts. Although we aim to keep this tutorial as accessible as possible for the novice reader, it would be a disservice to avoid technical details where they are necessary. Nevertheless, we aim to break these technical details down into simpler terms to ease with understanding. Ultimately, it is our hope that this tutorial will serve as a useful guide and a great starting point for cognitive aging researchers who are interested in learning cognitive modeling and applying such models to their own data.  
 
 ## What are the Benefits of Cognitive Modeling? 
 
-Perhaps the simplest and most compelling reason to use a model that formalizes the relationship between processes and behavior is that it gets us closer to what we (as cognitive psychologists) are interested in. Consider the following example. The finding that older adults are less likely to recall the source of information and that they are less likely to rely on recollective phenomenology when recalling source information is interesting in and of itself, but thinking through the possible underlying processes and formalizing them in, for example, a multinomial processing tree (MPT) model begins to elucidate *why* this is the case. For example, [@BoywittEtAl2012], who used the MPT model of multidimensional source memory from [@MeiserAndBroder2002], found that older adults were less likely to bind together source dimensions of an episode and did not rely on the retrieval of perceptual source features to distinguish between recollective and familiarity-based responses regarding memory for the source of an item. Whereas younger adults only maybe "remember" responses (corresponding to a recollective experience) when they retrieved perceptual source details, older adults were equally likely to make "remember" or "know" responses (corresponding to a reliance on familiarity), regardless of the extent to which they retrieved perceptual source features, as estimated from the MPT model.
+Perhaps the simplest and most compelling reason to use a model that formalizes the relationship between processes and behavior is that it gets us closer to what we (as cognitive psychologists) are interested in. Consider the following example. The finding that older adults are less likely to recall the source of information and that they are less likely to rely on recollective phenomenology when recalling source information is interesting in and of itself, but thinking through the possible underlying processes and formalizing them in, for example, an MPT model begins to elucidate *why* this is the case. For example, [@BoywittEtAl2012], who used the MPT model of multidimensional source memory from [@MeiserAndBroder2002], found that older adults were less likely to bind together source dimensions of an episode and did not rely on the retrieval of perceptual source features to distinguish between recollective and familiarity-based responses regarding memory for the source of an item. Whereas younger adults only maybe "remember" responses (corresponding to a recollective experience) when they retrieved perceptual source details, older adults were equally likely to make "remember" or "know" responses (corresponding to a reliance on familiarity), regardless of the extent to which they retrieved perceptual source features, as estimated from the MPT model.
 
 <!--
 Nate: I added in the reference to Boywitt et al. (2012) as it relates to your point on source memory impairments in older adults, as, to my knowledge, that is one of the few studies which have used an MPT model for that purpose.
@@ -185,7 +185,7 @@ We surveyed all articles published between the years 2011 and 2020 in the journa
 
 For each study, we recorded what the dependent variables (DV) were and how these DV's were analyzed. We assume that all cognitive studies were interested in making some claims about cognition, but we only regarded DV's which attempted to measure a latent process as a strict measure of a latent process. For example, many studies reported reaction time as the DV, but most of these studies only considered mean or median differences in reaction time. Mean differences in reaction time are not a measure of a latent process difference between young and older adults. An example of a reaction time DV that satisfies being a measure of a latent process is a drift rate parameter, as this can be interpreted as the rate of accumulation of evidence (a latent process). By far the most commonly reported DV was accuracy, which was defined in many different ways, depending on the task. Examples included proportion correct, proportion of items recalled, $d'$, and proportion hits minus proportion false alarms. We regarded these DV's as measures of latent processes if they attempted to isolate sensitivity from bias. Therefore, while we did not regard proportion correct as a measure of a latent process, we did consider the corrected recognition metric (proportion of hits minus proportion of false alarms) as a measure of a latent process [@SnodgrassAndCorwin1988]. We also coded whether each study which measured a latent process also fit a cognitive model. The distinction here is that some DV's which measured a latent process were based on parameters of a cognitive model (such as a SDT, MPT, diffusion, or computational model), whereas others were simply transformations of the data (e.g., proportion hits minus proportion false alarms). 
 
-In Figure \ref{fig:pa} (panel a) we plotted the proportion of studies per year in *Psychology and Aging* in which the DV was a measure of a latent process. As depicted, this proportion has been relatively low, though it has been rising slightly in more recent years. Nevertheless, it has never been more than 50% of cognitive aging studies in a given year. In other words, more than half of all cognitive aging studies published in one of the field's top journals do not report age differences on an outcome that is a measure of a latent process! In Figure \ref{fig:pa} (panel b) we plotted, from those studies for which the DV was a measure of a latent process, the proportion of those studies which fit a cognitive model. The picture here is somewhat less clear, as there have been rises and falls on a year-to-year basis in terms of the number of cognitive aging studies which have used a cognitive model. Also, while it is true that in some years this proportion has been greater than 50%, this is still only 50% (or more) of *less than half* of all cognitive aging studies published in *Psychology and Aging* that year. In fact, in the year 2015, where the proportion of studies which used a cognitive model to measure a latent process was really high (nearly 100%), less than 10% of all cognitive aging studies that year attempted to measure a latent process. 
+In Figure \ref{fig:pa} (panel a) we plotted the proportion of studies per year in *Psychology and Aging* in which the DV was a measure of a latent process. As depicted, this proportion has been relatively low, though it has been rising slightly in more recent years. Nevertheless, it has never been more than 50% of cognitive aging studies in a given year. In other words, more than half of all cognitive aging studies published in one of the field's top journals do not report age differences on an outcome that is a measure of a latent process! In Figure \ref{fig:pa} (panel b) we plotted, from those studies for which the DV was a measure of a latent process, the proportion of those studies which fit a cognitive model. The picture here is somewhat less clear, as there have been rises and falls on a year-to-year basis in terms of the number of cognitive aging studies which have used a cognitive model. Also, while it is true that in some years this proportion has been greater than 50%, this is still only 50% (or more) of *less than half* of all cognitive aging studies published in *Psychology and Aging* that year. 
 
 ```{r pa, fig.cap="a: Proportion of cognitive aging studies per year in *Psychology and Aging* in which the dependent variable (DV) was a measure of a latent cognitive process. b: Conditional proportion of studies per year which, given that the DV was a measure of a latent cognitive process, used a cognitive model"}
 
@@ -229,6 +229,8 @@ comb <- ggarrange(fig_a, fig_b, ncol=1, nrow=2)
 comb
 
 ```
+
+
 
 Clearly, cognitive modeling remains the exception, rather than the norm, in cognitive aging research. In the next section, we describe how to fit a SDT account of data from a discrimination task (e.g., a recognition memory study) with a focus on testing age differences in underlying parameters. Specifically, we describe how to implement these as hierarchical models that simultaneously model individual participant and group level effects.
 
@@ -306,9 +308,7 @@ Higher values of $a$ spread the criteria further apart, whereas higher values of
 
 ## Implementing the model
 
-Figure \ref{fig:sdt} shows the situation where $d = `r ps[1]`$, $s = `r ps[2]`$, $a = `r ps[3]`$, and $b = `r ps[4]`$. However, these parameters likely vary across participants (differing both between young and older adults, but also within each age group) as well as with experimental manipulation. We could fit the model to each individual participant separately (e.g., via maximum likelihood), but, for the reasons outlined above, our preferred approach is to model both group- and individual-level effects simultaneously in a Bayesian hierarchical model. In this tutorial we will outline how to implement the SDT model in the probabilistic programming language, Stan [https://mc-stan.org/; @carpenter2017stan], which performs the MCMC sampling often required in fitting models under a Bayesian framework. Documentation and tutorials on the Stan language can be found here: https://mc-stan.org/users/documentation/tutorials. Stan can be used in conjunction with other software, such as Python, Matlab, and Stata (https://mc-stan.org/users/interfaces/), but here we will be using `R` [@rteam] and the `rstan` package [@rstan] as our interface (see the supplementary materials[^suppl] for more information on installing the relevant software). Thus, while familiarity with `R` will be helpful, the tutorial on writing Stan models will hopefully be of use to users of other analysis software.[^R] Next we will go through a series of questions that we need to address to set up a working Stan implementation of the (hierarchical) SDT model.
-
-[^suppl]: The supplement is available here: https://github.com/stephenrho/cognitive-aging-modeling/raw/master/cognitive-modeling-supplement.pdf
+Figure \ref{fig:sdt} shows the situation where $d = `r ps[1]`$, $s = `r ps[2]`$, $a = `r ps[3]`$, and $b = `r ps[4]`$. However, these parameters likely vary across participants (differing both between young and older adults, but also within each age group) as well as with experimental manipulation. We could fit the model to each individual participant separately (e.g., via maximum likelihood), but our preferred approach is to model both group- and individual-level effects simultaneously in a Bayesian hierarchical model [see @GelmanAndHill2007 chapter 12 for why this is desirable]. In this tutorial we will outline how to implement the SDT model in the probabilistic programming language, Stan [https://mc-stan.org/; @carpenter2017stan], which performs the MCMC sampling often required in fitting models under a Bayesian framework. Documentation and tutorials on the Stan language can be found here: https://mc-stan.org/users/documentation/tutorials. Stan can be used in conjunction with other software, such as Python, Matlab, and Stata (https://mc-stan.org/users/interfaces/), but here we will be using `R` [@rteam] and the `rstan` package [@rstan] as our interface. Thus, while familiarity with `R` will be helpful, the tutorial on writing Stan models will hopefully be of use to users of other analysis software.[^R] Next we will go through a series of questions that we need to address to set up a working Stan implementation of the (hierarchical) SDT model.
 
 [^R]: We encourage readers to download the materials accompanying this article from https://github.com/stephenrho/cognitive-aging-modeling and use the `fit_SDT.R` script to follow the analyses described here. As the models can take a long time to fit, fitted models can also be downloaded by following instructions at the link above.
 
@@ -321,7 +321,8 @@ rdat = read.csv("data/example-data.csv")
 head(rdat)
 ```
 
-The format of these data is referred to as 'long', where a single observation is recorded on each row (as opposed to 'wide' with one row per participant). Each row represents a trial where `id` is a participant identifier, `group` signals whether the participant is younger (Y) or older (O), `signal` codes for whether the trial was noise (0) or signal (1), and `rating` is the response. The variable `cond` codes for an additional factor of condition with two levels (A, B; 40 observations each), which we include here to demonstrate how to test for interactions between age and other variables, which are common in the cognitive aging literature. As a concrete example, this could be thought of as data from a recognition memory experiment in which each participant rated their degree of memory for particular items (from sure new to sure old) under two conditions (e.g., a levels of processing manipulation).
+
+The format of these data is referred to as long (or tall), where a single observation is recorded on each row. Each row represents a trial where `id` is a participant identifier, `group` signals whether the participant is younger (Y) or older (O), `signal` codes for whether the trial was noise (0) or signal (1), and `rating` is the response. The variable `cond` codes for an additional factor of condition with two levels (A, B; 40 observations each), which we include here to demonstrate how to test for interactions between age and other variables, which are common in the cognitive aging literature. As a concrete example, this could be thought of as data from a recognition memory experiment in which each participant rated their degree of memory for particular items (from sure new to sure old) under two conditions (e.g., a levels of processing manipulation).
 
 With this data in mind we can start to write the Stan model, which can be found in the file `SDT_m1.stan` (available at https://github.com/stephenrho/cognitive-aging-modeling). Stan models are made up of 'blocks' (https://mc-stan.org/docs/2_24/reference-manual/overview-of-stans-program-blocks.html) and usually start by declaring the data. The Stan code below specifies the data necessary to fit the SDT model (the comments, following '//', describe each line).
 
@@ -658,15 +659,37 @@ As cognitive aging researchers are primarily interested in understanding how cog
 
 There are multiple classes of cognitive models, many suitable for different tasks or outcomes. In addition, we can distinguish between *computational models* and *measurement models*. Computational models aim to formulate process theories to adequately describe cognitive processes and representations underlying tasks like the encoding, storage, and retrieval from memory. Common examples are global memory models like REM [@ShiffrinAndSteyvers1997] and SAM [@RaaijmakersAndShiffrin1981], which make specific predictions about the structure and mechanics of memory. Such models make specific predictions about the archicture of a cognitive process, such as how memory traces are created (e.g., as vectors of event features). Measurement models, on the other hand, aim to explain how individuals arrive at responses on a task by some combination of cognitive processes and response strategies, which entails that these models are more akin to general decision theories. The SDT models covered in this tutorial are one popular example of a measurement model because they explain discrimination on a two-choice task as a combination of memory strength and response bias, but besides conceptualizing the output of the memory retrieval process as continuous (as opposed to discrete, which is implied by MPT models), SDT models do not make specific processing predictions about the encoding or retrieval from memory.
 
-Widespread use of cognitive modeling in cognitive aging research can be useful for addressing potential issues of non-replicability in the field. Because many studies in cognitive aging only rely on analyses applied to the raw data (potentially as many as 2/3rds of all studies, as our survey of Volume 34 of *Psychology and Aging* suggests), these studies risk conflating the contributions of cognitive processes with response bias or other non-cognitive processes [@RotelloEtAl2008; @rhodes2019interaction]. Accordingly, these studies risk overestimating the amount of age-related change that occurs to specific cognitive processes (e.g., memory strength). If age differences in cognitive processes are actually quite small, then the true effect size will be small as well, such that the probability of replication will be reduced, especially with under-powered studies. Relatedly, such studies may lead to a mistaken literature of age differences in cognitive processes that are based on analyses that conflate different processes or some processes with participant bias [in this case replication would only serve to compound the error; @RotelloEtAl2015]. In addition, cognitive models are better suited to ascertaining whether there is evidence for or against an age difference, as age comparisons in cognitive models are based on differences in parameters, which enables equivalence testing. As evidence for null effects may of particular interest to cognitive aging researchers, the ability to quantify such evidence, as with Bayesian implementations of cognitive models, should be a powerful asset for cognitive aging researchers.
+Widespread use of cognitive modeling in cognitive aging research can be useful for addressing potential issues of non-replicability in the field. Because many studies in cognitive aging only rely on analyses applied to the raw data (as our survey of the last ten years of articles in *Psychology and Aging* indicates), these studies risk conflating the contributions of cognitive processes with response bias or other non-cognitive processes [@RotelloEtAl2008; @rhodes2019interaction]. Accordingly, these studies risk overestimating the amount of age-related change that occurs to specific cognitive processes (e.g., memory strength). If age differences in cognitive processes are actually quite small, then the true effect size will be small as well, such that the probability of replication will be reduced, especially with under-powered studies. Relatedly, such studies may lead to a mistaken literature of age differences in cognitive processes that are based on analyses that conflate different processes or some processes with participant bias [in this case replication would only serve to compound the error; @RotelloEtAl2015]. In addition, cognitive models are better suited to ascertaining whether there is evidence for or against an age difference, as age comparisons in cognitive models are based on differences in parameters, which enables equivalence testing. As evidence for null effects may of particular interest to cognitive aging researchers, the ability to quantify such evidence, as with Bayesian implementations of cognitive models, should be a powerful asset for cognitive aging researchers.
 
 ## Recommendations for Best Practices and Further Readings
 
 This tutorial is likely to serve as one important learning tool for cognitive aging researchers as they begin to embark on their own cognitive modeling journeys. However, there are certainly other resources to consult, and learning cognitive modeling requires time, patience, and dedication. For a lengthier read about cognitive modeling in general (though not with specific applications in aging, per se), we recommend the great book by @FarrellAndLewandowsky2018, which also includes references to R code and Bayesian modeling. There are many great books for learning Bayesian statistics more generally, including @Kruschke2015 and @McElreath2016 (and see the article by @EtzEtAl2018 for an annoted reading list). Finally, many great articles on the topic of cognitive modeling were published in the December 2019 issue of *Computational Brain \& Behavior*, which featured a lengthy discussion among several top cognitive modelers on the topic of robust modeling in cognitive science [@LeeEtAl2019] and other best practices in cognitive modeling, including whether cognitive models should be pre-registered [@MacEachernAndVanZandt2019]. 
 
+Cognitive modeling is an ever-evolving field. Therefore, it is important that cognitive modelers keep as up-to-date as possible with new advances and recommended practices. In this tutorial, we focused on hierarchical Bayesian estimation of cognitive models, as estimation under a hierarchical Bayesian framework is suitable for addressing both and individual- and group-level effects simultaneously and is a powerful technique for non-linear modeling, which is often not possible with frequentist methods. Bayesian analyses are more robust than frequentist equivalents, as they can regularize inference in low-power situations [@MoreyEtAl2016] and are suitable for quantifiying uncertainty about cognitive parameters, and models in general [@WagenmakersEtAl2016]. When adopting a Bayesian analytical approach for cognitive modeling, researchers should consider the following practices regarding choice of prior specification of model parameters; diagnostic checks of model adequacy, convergence, and fit; and posterior predictive checks of the model, using simulations from the model's posterior distribution (for a more detailed discussion, including a recommended work-flow, see @SchadEtAlpreprint). In addition, it is often necessary to compare multiple models, and such comparisons can be made in a Bayesian framework with a Bayes factor approach, though researchers should be mindful of the sensitivity of Bayes factors to priors. We discuss each of these points in more depth below.
+
+### Choice of Priors
+
+An important ingredient in a Bayesian model is the prior distribution of the model's parameters. The prior conveys our beliefs about the values a parameter should take before we see the data; although this may seem "subjective," a good prior is chosen based on a careful consideration of the literature. There is no one perfect prior that fits every model. Instead, priors need to be chosen based on reasonable assumptions about what values are plausible for a parameter. For example, if a researcher is interested in comparing reaction times between young and older adults with a drift diffusion model, specifying a prior on the drift rate parameter that places most of its weight on extreme reaction times of, for instance, less than 50 ms would be a bad prior, as too much prior weight is given to implausible reaction times (for a discussion of why such fast reaction times are implausible, see, for example @RouderEtAl2008rt). 
+
+We recommend that researchers select priors that are sensible for their experimental design and the research question at hand. Priors can be chosen to be weakly informative, such that they do not weigh as heavily as the data in determining the values of the posterior distribution. However, researchers should be careful when choosing diffuse priors (which cast a wide net overly an extremely large range of plausible values for a parameter), as these can result in extremely large and unreliable posterior estimates if the data is underpowered. For non-linear models, which are common for cognitive models, priors need to be informative enough to ensure the posterior sampling algorithm (e.g., MCMC) can get started and that posterior chains can converge. It is also important to consider what scale the priors are being modeled on; a Normal(0,10) prior may be weakly informative when working with parameters that are modeled on the raw scale of the data, but could be extremely diffuse if the model parameters are on a log-normal scale.  
+
+Researchers should evaluate how influential their priors were by conducting prior sensitivty analyses, in which they compare the posterior distribution of the model parameters, based on the same data set, with different prior specifications. These may include a weakly informative prior and a highly informative prior. Subtle changes in the posterior distribution are likely to occur, but if substantial changes occur, this may call into question how reliable the data were, or whether the chosen prior was appropriate. 
+
+Sometimes a prior may be grossly inadequate for a particular research question. Researchers may consider conducting a prior predictive check to test whether their chosen priors make reasonable predictions about the possible values a parameter may take or whether these priors result in overestimation extreme values (for a detailed discussion on prior predictive checks, including a worked example, see @SchadEtAlpreprint).
+
+### Diagnosing Model Convergence
+
+Cognitive models are too complex for their posterior distributions to be solved analytically. Instead, estimation of the posterior distribution relies on sampling from it with an algorithm, usually an MCMC algorithm. A detailed discussion of MCMC is beyond the scope of this article. However, it is important to ensure that the algorithm produced reliable posterior estimates. When sampling from the model's posterior distribution, it is recommended that the analyst run multiple chains (usually at least 3 or 4). From each chain, the analyst specifies a set number of iterations, as we demonstrated in our worked example in this tutorial. The first several hundred (or, in some cases, thousands) of these iterations should be designated as burn-in samples, which are discarded from the actual posterior summaries of the model's parameters. This burn-in period is necessary to ensure that the chains converge to the same values of the posterior distribution. Convergence can be diagnosed in multiple ways, as with an autocorrelation plot, which shows how correlated successive iterations of the sampling algorithm are across various lags. For example, an autocorrelation plot can demonstrate whether two samples drawn from the posterior distribution at 50 iterations apart are very highly correlated; if they are, this likely indicates that the MCMC algorithm is getting stuck in some region of the posterior distribution. The analyst can correct for high autocorrelation by running a higher number of iterations and setting a thinning rate to ensure that only every, say, 10 iterations are retained. Convergence can also be diagnosed with the Gelman-Rubin statistic described in @GelmanEtAl2014. 
+
 <!--
-Nate: I stopped here on best practices, as now we should include some from that Bayesian workflow paper you mentioned, which I haven't looked over extensively yet.
+@Steve: Do you want to add more on convergence issues? I think most of these are pretty boiler plate.
 -->
+
+### Assessing Model Fit: Posterior Predictive Checks
+
+After fitting a model, it is the researcher's responsibility to ensure the model actually fits the data and to assess the predictive power of the model to fit unseen data. One way to do this is with posterior predictive checks, which we described in our worked example earlier. The basic idea of a posterior predictive check is that, based on the posterior distribution of the model, random samples of "new" data are simulated. Next, these new samples are compared with the observed data, and a good match (e.g., in terms of some summary statistic, like a mean) indicates that the model fits well because it can recover the summary statistics of the data in its simulations.
+
+## Conclusions
 
 To conclude, aging researchers seeking to understand age differences in cognitive processes should consider incorporating cognitive modeling, either in lieu of standard statistical analyses applied to the raw data, or to supplement those analyses with models that parameterize the latent cognitive processes of theoretical or empirical interest.
 
