--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -416,6 +416,7 @@
   publisher={Springer}
 }
 
+
 @article{WagenmakersEtAl2012,
   title={On the interpretation of removable interactions: A survey of the field 33 years after {Loftus}},
   author={Wagenmakers, Eric-Jan and Krypotos, Angelos-Miltiadis and Criss, Amy H and Iverson, Geoff},
@@ -680,6 +681,16 @@
  year = {2008}
 }
 
+@article{RouderEtAl2008rt,
+ author = {Rouder, Jeffrey N and Tuerlinckx, Francis and Speckamn, Paul and Lu, Jun and Gomez, Pablo},
+ title = {A hierarchical approach for fitting curves to response time measurements.},
+ journal = {Psychonomic Bulletin \& Review},
+ volume = {15},
+ number = {6},
+ pages = {1201--1208},
+ year = {2008}
+}
+
 @article{ChapmanAndChapman1973,
   title={Problems in the measurement of cognitive deficits.},
   author={Chapman, Loren J and Chapman, Jean P},
@@ -904,6 +915,14 @@
   pages={590--597},
   year={1996},
   publisher={Springer}
+}
+
+@article{SchadEtAlpreprint,
+  title={Toward a principled {B}ayesian workflow in cognitive science.},
+  author={Schad, Daniel J and Betancourt, Michael and Vasishth, Shravan},
+  note = {Preprint},
+  url = {https://arxiv.org/abs/1904.12765},
+  year={2020}
 }
 
 @book{GelmanEtAl2014,
@@ -1240,8 +1259,29 @@
   volume={21},
   number={7},
   pages={342--346},
-  year={2015},
+  year={2014},
   publisher={Cold Spring Harbor}
+}
+
+@article{MoreyEtAl2016,
+  title={The philosophy of {B}ayes factors and the quantification of statistical evidence.},
+  author={Morey, Richard D and Romeijn, Jan-Willem and Rouder, Jeffrey N},
+  journal={Journal of Mathematical Psychology},
+  volume={72},
+  pages={6--18},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{WagenmakersEtAl2016,
+  title={Bayesian benefits for the pragmatic researcher.},
+  author={Wagenmakers, Eric-Jan and Morey, Richard D and Lee, Michael D},
+  journal={Current Directions in Psychological Science},
+  volume={25},
+  number={3},
+  pages={169--176},
+  year={2016},
+  publisher={Sage}
 }
 
 @book{lee2014bayesian,
